--- a/dash-profile-switch/source/info.plist
+++ b/dash-profile-switch/source/info.plist
@@ -5,7 +5,7 @@
 	<key>bundleid</key>
 	<string>nikivi.dash-profiles</string>
 	<key>category</key>
-	<string>mine</string>
+	<string>Mine</string>
 	<key>connections</key>
 	<dict>
 		<key>6ADBFE54-0F5D-4D4D-BA01-424EDE75EC3B</key>
@@ -45,6 +45,19 @@
 	<string>Dash profile switch</string>
 	<key>objects</key>
 	<array>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>triggerid</key>
+				<string>switch</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.trigger.external</string>
+			<key>uid</key>
+			<string>868EAE91-22E4-4969-B78E-9BE4F13FB88B</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
@@ -90,19 +103,6 @@
 			<string>alfred.workflow.action.openurl</string>
 			<key>uid</key>
 			<string>F4FC387A-6A8C-4D96-A24D-8F246A74E01F</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>triggerid</key>
-				<string>switch</string>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.trigger.external</string>
-			<key>uid</key>
-			<string>868EAE91-22E4-4969-B78E-9BE4F13FB88B</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
