--- a/objects-library/source/info.plist
+++ b/objects-library/source/info.plist
@@ -5,7 +5,7 @@
 	<key>bundleid</key>
 	<string>nikivi.objects</string>
 	<key>category</key>
-	<string>mine</string>
+	<string>Mine</string>
 	<key>connections</key>
 	<dict/>
 	<key>createdby</key>
