--- a/months-numbers/source/info.plist
+++ b/months-numbers/source/info.plist
@@ -5,7 +5,7 @@
 	<key>bundleid</key>
 	<string>nikivi.month.numbers</string>
 	<key>category</key>
-	<string>mine</string>
+	<string>Mine</string>
 	<key>connections</key>
 	<dict>
 		<key>57E7D8A0-DA41-457F-9FE1-154441AB917F</key>
@@ -48,19 +48,15 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>autopaste</key>
-				<false/>
-				<key>clipboardtext</key>
-				<string>{query}</string>
-				<key>transient</key>
-				<false/>
+				<key>triggerid</key>
+				<string>months</string>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.output.clipboard</string>
+			<string>alfred.workflow.trigger.external</string>
 			<key>uid</key>
-			<string>3FD0DA9D-7238-4BCF-B96B-518BF96BC747</string>
+			<string>57E7D8A0-DA41-457F-9FE1-154441AB917F</string>
 			<key>version</key>
-			<integer>2</integer>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -94,15 +90,19 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>triggerid</key>
-				<string>months</string>
+				<key>autopaste</key>
+				<false/>
+				<key>clipboardtext</key>
+				<string>{query}</string>
+				<key>transient</key>
+				<false/>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.trigger.external</string>
+			<string>alfred.workflow.output.clipboard</string>
 			<key>uid</key>
-			<string>57E7D8A0-DA41-457F-9FE1-154441AB917F</string>
+			<string>3FD0DA9D-7238-4BCF-B96B-518BF96BC747</string>
 			<key>version</key>
-			<integer>1</integer>
+			<integer>2</integer>
 		</dict>
 	</array>
 	<key>readme</key>
