--- a/static-searches/source/info.plist
+++ b/static-searches/source/info.plist
@@ -5,7 +5,7 @@
 	<key>bundleid</key>
 	<string>nikivi.search-the-web</string>
 	<key>category</key>
-	<string>mine</string>
+	<string>Mine</string>
 	<key>connections</key>
 	<dict>
 		<key>05FF6367-EE22-4B61-BFE1-D7CEBBC7C071</key>
