--- a/dictionary-search/source/info.plist
+++ b/dictionary-search/source/info.plist
@@ -36,7 +36,7 @@
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string>Nikita Voloboev &lt;nikita.voloboev@icloud.com&gt;</string>
+	<string>Nikita Voloboev</string>
 	<key>description</key>
 	<string>Access dictionary with a hotkey</string>
 	<key>disabled</key>
@@ -100,7 +100,9 @@
 		</dict>
 	</array>
 	<key>readme</key>
-	<string></string>
+	<string>Details on how to effectively use this workflow are found in the GitHub repository attached to this workflow.
+
+Post any issues and feature requests you have there. 💜</string>
 	<key>uidata</key>
 	<dict>
 		<key>5F5C6A87-B882-40D9-9D56-BD9AE04E8847</key>
