--- a/imgur-album-download/source/info.plist
+++ b/imgur-album-download/source/info.plist
@@ -174,7 +174,7 @@
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string>Nikita Voloboev &lt;nikita.voloboev@icloud.com&gt;</string>
+	<string>Nikita Voloboev</string>
 	<key>description</key>
 	<string></string>
 	<key>disabled</key>
@@ -464,7 +464,9 @@ end alfred_script</string>
 		</dict>
 	</array>
 	<key>readme</key>
-	<string></string>
+	<string>Details on how to effectively use this workflow are found in the GitHub repository attached to this workflow.
+
+Post any issues and feature requests you have there. 💜</string>
 	<key>uidata</key>
 	<dict>
 		<key>8409A5C0-B3F0-4AD2-A7BF-F2D36C3ADFBE</key>
