--- a/file-actions/source/info.plist
+++ b/file-actions/source/info.plist
@@ -209,7 +209,7 @@
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string>Nikita Voloboev &lt;nikita.voloboev@icloud.com&gt;</string>
+	<string>Nikita Voloboev</string>
 	<key>description</key>
 	<string></string>
 	<key>disabled</key>
@@ -718,7 +718,9 @@ tell application "System Events"	if frontmost of process "iTerm2" is false then
 		</dict>
 	</array>
 	<key>readme</key>
-	<string></string>
+	<string>Details on how to effectively use this workflow are found in the GitHub repository attached to this workflow.
+
+Post any issues and feature requests you have there. 💜</string>
 	<key>uidata</key>
 	<dict>
 		<key>08178A16-762C-4A43-880A-EFE08027B15C</key>
