--- a/folder-search/source/info.plist
+++ b/folder-search/source/info.plist
@@ -100,7 +100,7 @@
 		<array/>
 	</dict>
 	<key>createdby</key>
-	<string>Nikita Voloboev &lt;nikita.voloboev@icloud.com&gt;</string>
+	<string>Nikita Voloboev</string>
 	<key>description</key>
 	<string></string>
 	<key>disabled</key>
@@ -357,7 +357,9 @@ tell application "System Events"	if frontmost of process "iTerm2" is false then
 		</dict>
 	</array>
 	<key>readme</key>
-	<string></string>
+	<string>Details on how to effectively use the workflow are found in the GitHub repository of the workflow.
+
+Post any issues and feature requests you have there. 💜</string>
 	<key>uidata</key>
 	<dict>
 		<key>03377977-4206-4DE4-B59C-45AAD4A0980A</key>
