--- a/keyboard-on-off/source/info.plist
+++ b/keyboard-on-off/source/info.plist
@@ -36,7 +36,7 @@
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string>Nikita Voloboev &lt;nikita.voloboev@icloud.com&gt;</string>
+	<string>Nikita Voloboev</string>
 	<key>description</key>
 	<string></string>
 	<key>disabled</key>
