--- a/months-numbers/source/info.plist
+++ b/months-numbers/source/info.plist
@@ -48,15 +48,19 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>triggerid</key>
-				<string>months</string>
+				<key>autopaste</key>
+				<false/>
+				<key>clipboardtext</key>
+				<string>{query}</string>
+				<key>transient</key>
+				<false/>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.trigger.external</string>
+			<string>alfred.workflow.output.clipboard</string>
 			<key>uid</key>
-			<string>57E7D8A0-DA41-457F-9FE1-154441AB917F</string>
+			<string>3FD0DA9D-7238-4BCF-B96B-518BF96BC747</string>
 			<key>version</key>
-			<integer>1</integer>
+			<integer>2</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -90,23 +94,21 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>autopaste</key>
-				<false/>
-				<key>clipboardtext</key>
-				<string>{query}</string>
-				<key>transient</key>
-				<false/>
+				<key>triggerid</key>
+				<string>months</string>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.output.clipboard</string>
+			<string>alfred.workflow.trigger.external</string>
 			<key>uid</key>
-			<string>3FD0DA9D-7238-4BCF-B96B-518BF96BC747</string>
+			<string>57E7D8A0-DA41-457F-9FE1-154441AB917F</string>
 			<key>version</key>
-			<integer>2</integer>
+			<integer>1</integer>
 		</dict>
 	</array>
 	<key>readme</key>
-	<string></string>
+	<string>Details on how to effectively use this workflow are found in the GitHub repository attached to this workflow.
+
+Post any issues and feature requests you have there. 💜</string>
 	<key>uidata</key>
 	<dict>
 		<key>3FD0DA9D-7238-4BCF-B96B-518BF96BC747</key>
