--- a/search-selection/source/info.plist
+++ b/search-selection/source/info.plist
@@ -218,7 +218,7 @@
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string>Nikita Voloboev &lt;nikita.voloboev@icloud.com&gt;</string>
+	<string>Nikita Voloboev</string>
 	<key>description</key>
 	<string></string>
 	<key>disabled</key>
@@ -1005,7 +1005,9 @@
 		</dict>
 	</array>
 	<key>readme</key>
-	<string></string>
+	<string>Details on how to effectively use the workflow are found in the GitHub repository of the workflow.
+
+Post any issues and feature requests you have there. 💜</string>
 	<key>uidata</key>
 	<dict>
 		<key>04D2A9A2-9BB5-44E6-A869-9E6C01D618CA</key>
