--- a/clean-folders/source/info.plist
+++ b/clean-folders/source/info.plist
@@ -85,7 +85,7 @@
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string>Nikita Voloboev &lt;nikita.voloboev@icloud.com&gt;</string>
+	<string>Nikita Voloboev</string>
 	<key>description</key>
 	<string>Cleans various folders from things</string>
 	<key>disabled</key>
@@ -330,7 +330,9 @@ fi</string>
 		</dict>
 	</array>
 	<key>readme</key>
-	<string></string>
+	<string>Details on how to effectively use this workflow are found in the GitHub repository attached to this workflow.
+
+Post any issues and feature requests you have there. 💜</string>
 	<key>uidata</key>
 	<dict>
 		<key>155ED3E5-4396-4B1B-BE88-90F3D55FC861</key>
