--- a/focus/source/info.plist
+++ b/focus/source/info.plist
@@ -85,7 +85,7 @@
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string>Nikita Voloboev &lt;nikita.voloboev@icloud.com&gt;</string>
+	<string>Nikita Voloboev</string>
 	<key>description</key>
 	<string>Block websites</string>
 	<key>disabled</key>
@@ -258,7 +258,9 @@
 		</dict>
 	</array>
 	<key>readme</key>
-	<string></string>
+	<string>Details on how to effectively use this workflow are found in the GitHub repository attached to this workflow.
+
+Post any issues and feature requests you have there. 💜</string>
 	<key>uidata</key>
 	<dict>
 		<key>2337DCB5-D355-4387-B1A7-97FF5C2EF512</key>
