--- a/go-play/source/info.plist
+++ b/go-play/source/info.plist
@@ -56,7 +56,7 @@
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string>Nikita Voloboev &lt;nikita.voloboev@icloud.com&gt;</string>
+	<string>Nikita Voloboev</string>
 	<key>description</key>
 	<string>Make shareable go playground from selected code</string>
 	<key>disabled</key>
@@ -296,7 +296,9 @@ sys.stdout.write(json)</string>
 		</dict>
 	</array>
 	<key>readme</key>
-	<string></string>
+	<string>Details on how to effectively use this workflow are found in the GitHub repository attached to this workflow.
+
+Post any issues and feature requests you have there. 💜</string>
 	<key>uidata</key>
 	<dict>
 		<key>0EC960E3-BDFD-4C79-B76E-512F06470E85</key>
