--- a/search-files/source/info.plist
+++ b/search-files/source/info.plist
@@ -830,7 +830,7 @@
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string>Nikita Voloboev &lt;nikita.voloboev@icloud.com&gt;</string>
+	<string>Nikita Voloboev</string>
 	<key>description</key>
 	<string>A lot of file filters to find files quickly</string>
 	<key>disabled</key>
@@ -2820,7 +2820,9 @@ fi</string>
 		</dict>
 	</array>
 	<key>readme</key>
-	<string></string>
+	<string>Details on how to effectively use this workflow are found in the GitHub repository attached to this workflow.
+
+Post any issues and feature requests you have there. 💜</string>
 	<key>uidata</key>
 	<dict>
 		<key>00EED526-7970-45F1-841A-C8B8AC69E876</key>
