--- a/karabiner-reload/source/info.plist
+++ b/karabiner-reload/source/info.plist
@@ -49,7 +49,7 @@
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string>Nikita Voloboev &lt;nikita.voloboev@icloud.com&gt;</string>
+	<string>Nikita Voloboev</string>
 	<key>description</key>
 	<string>Karabiner utilities</string>
 	<key>disabled</key>
@@ -138,7 +138,9 @@
 		</dict>
 	</array>
 	<key>readme</key>
-	<string></string>
+	<string>Details on how to effectively use this workflow are found in the GitHub repository attached to this workflow.
+
+Post any issues and feature requests you have there. 💜</string>
 	<key>uidata</key>
 	<dict>
 		<key>4177C31C-F83C-4C5B-BCDF-30386E599615</key>
