--- a/search-files/source/info.plist
+++ b/search-files/source/info.plist
@@ -35,6 +35,16 @@
 			</dict>
 			<dict>
 				<key>destinationuid</key>
+				<string>16EC7338-CE7B-4C56-99A8-41363D1DB4C9</string>
+				<key>modifiers</key>
+				<integer>524288</integer>
+				<key>modifiersubtext</key>
+				<string>Get name of file</string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+			<dict>
+				<key>destinationuid</key>
 				<string>F481CB40-5F73-4B5D-81E2-6C1CC8738DF9</string>
 				<key>modifiers</key>
 				<integer>0</integer>
@@ -95,6 +105,19 @@
 			<dict>
 				<key>destinationuid</key>
 				<string>6370D5BD-C1C2-4A63-8E93-B2AC32C8CAC9</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>16EC7338-CE7B-4C56-99A8-41363D1DB4C9</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>E1849ACF-9B60-425C-881C-FCA639BD9ACF</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -269,6 +292,16 @@
 				<integer>262144</integer>
 				<key>modifiersubtext</key>
 				<string>Trash file</string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+			<dict>
+				<key>destinationuid</key>
+				<string>16EC7338-CE7B-4C56-99A8-41363D1DB4C9</string>
+				<key>modifiers</key>
+				<integer>524288</integer>
+				<key>modifiersubtext</key>
+				<string>Get name of file</string>
 				<key>vitoclose</key>
 				<false/>
 			</dict>
@@ -635,6 +668,19 @@
 			<dict>
 				<key>destinationuid</key>
 				<string>04B7255A-49E1-423B-AE98-319E3B944069</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>E1849ACF-9B60-425C-881C-FCA639BD9ACF</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>E0B00032-AC63-487D-9637-FB56E38B46F6</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -1353,6 +1399,65 @@ fi</string>
 			<string>alfred.workflow.trigger.external</string>
 			<key>uid</key>
 			<string>8D09B042-C813-409A-AD8D-A266C95CD5DE</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>autopaste</key>
+				<false/>
+				<key>clipboardtext</key>
+				<string>{query}</string>
+				<key>transient</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.output.clipboard</string>
+			<key>uid</key>
+			<string>E0B00032-AC63-487D-9637-FB56E38B46F6</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>concurrently</key>
+				<false/>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>script</key>
+				<string># Extract file name from a given path removing prefixes.
+# i.e. Given /Users/nikivi/Documents/books/b. daniel kahneman - thinking, fast and slow.pdf
+# =&gt; daniel kahneman - thinking, fast and slow.pdf
+
+# Get path to file
+file="$1"
+
+# Get file name from given path
+file=$(basename "$file" .pdf)
+
+# Remove dotted prefix if it exists (b. name =&gt; name)
+echo -n ${file#?. }</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>type</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>E1849ACF-9B60-425C-881C-FCA639BD9ACF</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.junction</string>
+			<key>uid</key>
+			<string>16EC7338-CE7B-4C56-99A8-41363D1DB4C9</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -2883,6 +2988,13 @@ Post any issues and feature requests you have there. 💜</string>
 			<key>ypos</key>
 			<integer>2110</integer>
 		</dict>
+		<key>16EC7338-CE7B-4C56-99A8-41363D1DB4C9</key>
+		<dict>
+			<key>xpos</key>
+			<integer>820</integer>
+			<key>ypos</key>
+			<integer>540</integer>
+		</dict>
 		<key>17360B10-3B59-4E14-A43D-D426631B0E0D</key>
 		<dict>
 			<key>xpos</key>
@@ -3202,12 +3314,28 @@ Post any issues and feature requests you have there. 💜</string>
 			<key>ypos</key>
 			<integer>1370</integer>
 		</dict>
+		<key>E0B00032-AC63-487D-9637-FB56E38B46F6</key>
+		<dict>
+			<key>xpos</key>
+			<integer>1070</integer>
+			<key>ypos</key>
+			<integer>510</integer>
+		</dict>
 		<key>E1827A97-E97E-4721-BCA8-0C0ADA466A3C</key>
 		<dict>
 			<key>xpos</key>
 			<integer>370</integer>
 			<key>ypos</key>
 			<integer>1110</integer>
+		</dict>
+		<key>E1849ACF-9B60-425C-881C-FCA639BD9ACF</key>
+		<dict>
+			<key>note</key>
+			<string>Extract file name (cutting the prefix)</string>
+			<key>xpos</key>
+			<integer>900</integer>
+			<key>ypos</key>
+			<integer>510</integer>
 		</dict>
 		<key>E38EC5CE-AEAC-4D81-BD34-723C8981F613</key>
 		<dict>
@@ -3309,7 +3437,7 @@ Post any issues and feature requests you have there. 💜</string>
 		</dict>
 	</dict>
 	<key>version</key>
-	<string>1.0.0</string>
+	<string>1.0.1</string>
 	<key>webaddress</key>
 	<string>https://github.com/nikitavoloboev/small-workflows</string>
 </dict>
